# OptiSANS

./: LICENSE  README.md  config.ini  parallel_process_pdb.sh  pyproject.toml  run_convergence_simulation_multiprotein.sh
data/: add_h.sh
docs/: requirements.txt
docs/source/: api.rst  conf.py  configuration.rst  index.rst  installation.rst  usage.rst  visualization.rst
src/: GA.py  cli.py  fitness_evaluation.py  generate_deuterated_pdbs.py  pdb_deuteration.py  plot_contrast_fitness.py  plot_i0_d2o.py  recycle.py
